# ponderadas_m8

./: .gitignore  README.md
ponderada_3/: README.md
ponderada_3/simple_chat/: package.xml  setup.cfg  setup.py
ponderada_3/simple_chat/simple_chat/: NavChat.py
ponderada_4/: Modelfile  README.md
ponderada_5/: README.md  chatbot_seguranca_trabalho_leitura.py  regras_workshop.txt
ponderada_6/: README.md  logic_perceptron.py
ponderada_7/: README.md  classificacao_mnist.ipynb  requirements.txt
ponderada_8/: README.md  requirements.txt  tradutor_voz.py
